# Q-opsec-firewall

./: .gitignore  DISTRIBUTION.md  README.md  RUST_SETUP.md  build.gradle.kts  release.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qopsec/firewall/: MainActivity.kt
app/src/main/java/com/qopsec/firewall/data/: AppDatabase.kt  AppPolicy.kt  BiometricAuth.kt  BlockList.kt  BlocklistManager.kt  BlocklistUpdateWorker.kt  ConnExporter.kt  ConnLog.kt  Diag.kt  EncryptedDns.kt  LockStore.kt  LogExporter.kt  Rule.kt  RuleChange.kt  RuleDao.kt  RuleRepository.kt  Settings.kt  Snapshot.kt  TrashPurgeWorker.kt  UpdateCheckWorker.kt  UpdateManager.kt  Usage.kt  UserDomains.kt
app/src/main/java/com/qopsec/firewall/ui/: CaptureScreen.kt  LockScreen.kt  PerAppScreen.kt  SettingsScreen.kt  StatsTab.kt  Theme.kt
app/src/main/java/com/qopsec/firewall/vpn/: AppResolver.kt  BootReceiver.kt  CaptureLog.kt  ConnectionEvent.kt  DnsCache.kt  KillSwitchTileService.kt  NativeBridge.kt  PacketParser.kt  TrafficSampler.kt  VpnFirewallService.kt
app/src/main/res/drawable/: bg_pill_green.xml  bg_pill_red.xml  ic_close.xml  ic_launcher_foreground.xml  ic_search.xml  ic_tab_connections.xml  ic_tab_rules.xml  ic_tab_stats.xml  ic_tab_trash.xml
app/src/main/res/layout/: notif_firewall.xml
app/src/main/res/raw/: blocklist_seed.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/src/: lib.rs
